--- a/index.html
+++ b/index.html
@@ -1,65 +1,30 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Personality Quiz</title>
-    <link rel = "stylesheet"
-          type = "text/css"
-          href = "index.css" />
+    <title>FitQ</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
   </head>
-
   <body>
     <h1>FitQ</h1>
-    <div class="questionGroup">
-      <img src="images/placeholder.png" alt="placeholder image">
-      <div class="text">
-        <p class="question">You are in front of the elevator, what are you doing right now?
-        </p>
-        <input type="radio" name="question1" value="a">Tapping my feet with anxiousness<br>
-        <input type="radio" name="question1" value="b">Continuously pressing the elevator’s button<br>
-        <input type="radio" name="question1" value="c">Looking around or watching something else<br>
-        <input type="radio" name="question1" value="d">Just staring at the floor
-        <br>
-        <input type="radio" value="e">Thinking ‘I should go in ASAP when the door opens’ while looking at the LED screen on the elevator<br>
-      </div>
-
+    <p >How are you feeling?</p>
+    <div class="toggle-holder">
+    <div class="emoji-toggle emoji-happy">
+      <input type="checkbox" id="toggle1" class="toggle">
+      <div class="emoji"></div>
+      <label for="toggle1" class="well"></label>
     </div>
-
-    <div class="questionGroup">
-      <img src="images/placeholder.png" alt="placeholder image">
-      <div class="text">
-        <p class="question">On a boring weekends or holidays, if you are renting a movie, what type of movie would you rent?
-        </p>
-        <input type="radio" name="question2" value="a">Adult Video<br>
-        <input type="radio" name="question2" value="b">Romance or Comedy<br>
-        <input type="radio" name="question2" value="c">Thriller or Action<br>
-        <input type="radio" name="question2" value="d">Too lazy to even rent one<br>
-        </div>
+    
+    <div class="emoji-toggle emoji-mad">
+      <input type="checkbox" id="toggle2" class="toggle">
+      <div class="emoji"></div>
+      <label for="toggle2" class="well"></label>
     </div>
-
-    <div class="questionGroup">
-      <img src="images/placeholder.png" alt="placeholder image">
-      <div class="text">
-        <p class="question">Lick your lips right now. How did you lick them?</p>
-        <input type="radio" name="question3" value="a">Upper Lips<br>
-        <input type="radio" name="question3" value="b">Lower Lips<br>
-        <input type="radio" name="question3" value="c">Both upper and lower lips<br>
-        <input type="radio" name="question3" value="d">Side lips<br>
-      </div>
-
+    
+    <div class="emoji-toggle emoji-love">
+      <input type="checkbox" id="toggle5" class="toggle">
+      <div class="emoji"></div>
+      <label for="toggle5" class="well"></label>
     </div>
-
-    <div class="questionGroup">
-      <img src="images/placeholder.png" alt="placeholder image">
-      <div class="text">
-        <p class="question">You got surprised after seeing ‘this’ while taking a stroll with your friend, What was ‘this’?</p>
-        <input type="radio" name="question4" value="a">Money<br>
-        <input type="radio" name="question4" value="b">Ghost<br>
-        <input type="radio" name="question4" value="c">Knife<br>
-        <input type="radio" name="question4" value="d">Rabbit<br>
-      </div>
-    </div>
-
-    <div id="button"><button type="button">Submit</button></div>
-
+  </div>
   </body>
 </html>
