--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
       <label for="toggle5" class="well"></label>
     </div>
   </div>
+  <a href="#output">
+    <Button type="button">></Button>
+  </a>
   </body>
 </html>
